<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TableRow>
        <TextView
        android:id="@+id/textView1"
        android:text="@string/latitude" 
        android:textSize="18sp"
        android:layout_gravity="right"
		android:layout_marginRight="8dip"
		android:layout_height="wrap_content"
        android:layout_width="wrap_content"
		/>
        
       <TextView
        android:id="@+id/location1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingRight="4dip"
        android:layout_height="wrap_content"
        
         />
       </TableRow>
    <TableRow>
    <TextView
	    android:id="@+id/textView2"
	    android:layout_gravity="right"
		android:layout_marginRight="8dip"
		android:textSize="18sp"
	    android:text="@string/longitude"
	    android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    
	<TextView
        android:id="@+id/location2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingRight="4dip"
        android:layout_height="wrap_content"
       
         />
	</TableRow>
	</TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="249dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/navigating" 
        android:background="@drawable/shape"
        android:layout_weight="1"
        android:layout_marginTop="5dip"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="249dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/single"
        android:background="@drawable/shape" 
        android:layout_weight="1"
        android:layout_marginTop="5dip"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="249dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/stop" 
        android:background="@drawable/shape"
        android:layout_weight="1"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="40dip"
        android:textColor="#000000"
        /> 
    
     <!--  ImageButton
        android:id="@+id/button4"
    	android:layout_width="249dip"
    	android:layout_height="70dip"
    	android:src="@drawable/npatch160dpi" 
    	android:background="@android:color/transparent"/-->

</LinearLayout>